[workspace]
members = [
    "crates/biliup",
    "crates/stream-gears",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.minimal]
inherits = "release"
opt-level = 's'
panic = 'abort'

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
